--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,6 @@
 @import-normalize;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&family=Roboto&family=Roboto+Condensed:wght@700&family=Source+Sans+Pro&display=swap");
+
+* {
+  box-sizing: border-box;
+}
