--- a/src/index.scss
+++ b/src/index.scss
@@ -3,4 +3,29 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+  &::before,
+  &::after {
+    @extend *;
+  }
+}
+a {
+  text-decoration: none;
+}
+ul,
+ol,
+li {
+  list-style: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: inherit;
+  font-size: inherit;
 }
