--- a/src/pages/styles/listing.module.scss
+++ b/src/pages/styles/listing.module.scss
@@ -4,6 +4,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  margin-bottom: 12rem;
 }
 
 .title {
@@ -17,7 +18,6 @@
 }
 
 .grid {
-  margin: 0 auto;
   margin-top: 6.25rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
