--- a/src/pages/styles/cartpage.module.scss
+++ b/src/pages/styles/cartpage.module.scss
@@ -31,3 +31,16 @@
     }
   }
 }
+
+.button {
+  background-color: $color-primary;
+  color: #fff;
+  font-size: 0.875rem;
+  padding: 0.8125rem 7.1875rem;
+  cursor: pointer;
+  transition: all 0.5s ease 0s;
+  &:hover {
+    background-color: #52bd6f;
+    transition: all 0.5s ease 0s;
+  }
+}
