--- a/src/components/Details/details.module.scss
+++ b/src/components/Details/details.module.scss
@@ -15,6 +15,10 @@
       width: 5rem;
       height: 5rem;
     }
+    button {
+      background-color: transparent;
+      cursor: pointer;
+    }
   }
   .main {
     display: flex;
