--- a/src/components/Cart/product.module.scss
+++ b/src/components/Cart/product.module.scss
@@ -37,6 +37,7 @@
     display: flex;
     flex-direction: row;
     gap: 1.5rem;
+    position: relative;
     .mainImg {
       max-width: 12.5rem;
       max-height: 18rem;
@@ -60,6 +61,26 @@
       .count {
         font-weight: 500;
         font-size: 1.5rem;
+      }
+    }
+    .buttons {
+      display: flex;
+      gap: 0.5rem;
+      position: absolute;
+      bottom: 1rem;
+      right: 1rem;
+      .arrowLeft {
+        background-color: transparent;
+        height: 1.5rem;
+        width: 1.5rem;
+        cursor: pointer;
+        img {
+          height: 1.5rem;
+          width: 1.5rem;
+        }
+      }
+      .arrowRight {
+        @extend .arrowLeft;
       }
     }
   }
