--- a/src/components/Details/Attributes/attributes.module.scss
+++ b/src/components/Details/Attributes/attributes.module.scss
@@ -38,12 +38,63 @@
       }
 
       .swatch {
-        padding: 0.25rem;
+        padding: 0.1rem;
         background-color: transparent;
-        border: 1px solid rgba(207, 207, 207, 0.5);
+        border: 1px solid rgba(207, 207, 207, 0.2);
         &Active {
           @extend .swatch;
           border: $color-primary solid 1px;
+        }
+      }
+    }
+  }
+}
+
+.miniAttributesContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  .miniAttribute {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
+    .miniAttributeName {
+      @include font($Raleway, 400);
+      font-size: 0.875rem;
+      text-transform: capitalize;
+    }
+
+    .miniBtnContainer {
+      display: flex;
+      gap: 0.5rem;
+      button {
+        cursor: pointer;
+      }
+      .miniButton {
+        // padding: 0 0.625rem;
+        width: 1.5rem;
+        height: 1.5rem;
+        background-color: #fff;
+        border: $color-text solid 1px;
+        @include font($Sans, 400);
+        font-size: 0.875rem;
+        line-height: 1.4rem;
+        text-transform: uppercase;
+        &Active {
+          @extend .button;
+          background-color: $color-text;
+          color: #fff;
+        }
+      }
+
+      .miniSwatch {
+        padding: 1px;
+        background-color: transparent;
+        border: 1px solid rgba(207, 207, 207, 0.3);
+        &Active {
+          @extend .miniSwatch;
+          border: $color-primary solid 2px;
         }
       }
     }
