--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -57,11 +57,13 @@
 }
 
 .imgContainer {
-  max-width: 22.125rem;
-  max-height: 20.625rem;
+  width: 22.125rem;
+  height: 20.625rem;
+  overflow: hidden;
   img {
     width: 100%;
-    height: 20.625rem;
+    height: 100%;
+    object-fit: contain;
   }
 }
 
