--- a/src/components/Cart/product.module.scss
+++ b/src/components/Cart/product.module.scss
@@ -39,12 +39,13 @@
     gap: 1.5rem;
     position: relative;
     .mainImg {
-      max-width: 12.5rem;
-      max-height: 18rem;
+      width: 12.5rem;
+      height: 18rem;
+      overflow: hidden;
       img {
-        width: 12.5rem;
-        height: 18rem;
-        object-fit: fill;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
       }
     }
     .counterContainer {
@@ -103,7 +104,7 @@
       display: flex;
       align-items: flex-start;
       flex-direction: column;
-      gap: 1rem;
+      gap: 0.1rem;
       text-align: start;
       .miniProductName {
         max-width: 8.125rem;
@@ -130,12 +131,14 @@
     overflow: hidden;
     z-index: 0;
     .miniMainImg {
-      max-width: 7.5rem;
-      max-height: 11.875rem;
+      align-self: center;
+      width: 7.5rem;
+      height: 11.875rem;
+      overflow: hidden;
       img {
-        width: 7.5rem;
-        height: 11.875rem;
-        object-fit: fill;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
       }
     }
     .miniCounterContainer {
