--- a/src/components/Details/details.module.scss
+++ b/src/components/Details/details.module.scss
@@ -25,12 +25,13 @@
     flex-direction: row;
     gap: 6.25rem;
     .mainImg {
-      max-width: 38.125rem;
-      max-height: 32rem;
+      width: 38.125rem;
+      height: 32rem;
+      overflow: hidden;
       img {
-        width: 38.125rem;
-        height: 32rem;
-        object-fit: fill;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
       }
     }
     .attributesContainer {
