add margin bottom

--- a/src/components/Main/main.module.scss
+++ b/src/components/Main/main.module.scss
@@ -5,6 +5,5 @@
   @include font($Raleway, 400);
   color: $color-text;
   max-width: 77.5rem;
-  margin: 0 auto;
-  margin-top: 5rem;
+  margin: 5rem auto;
 }
