--- a/src/components/MiniCart/minicart.module.scss
+++ b/src/components/MiniCart/minicart.module.scss
@@ -43,65 +43,76 @@
     height: 42rem;
     overflow: auto;
     padding: 2rem 1rem;
+    .title {
+      align-self: flex-start;
+      margin-bottom: 2rem;
+      font-weight: 700;
+      text-transform: capitalize;
+      span {
+        font-weight: 500;
+      }
+    }
     .basketContainer {
       display: flex;
       flex-direction: column;
-      .title {
-        align-self: flex-start;
-        margin-bottom: 2rem;
-        font-weight: 700;
-        text-transform: capitalize;
-        span {
-          font-weight: 500;
+
+      .products {
+        display: flex;
+        flex-direction: column;
+        gap: 2.5rem;
+        margin-bottom: 8.9rem;
+      }
+    }
+    .placeholder {
+      margin: 14.5rem auto;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      opacity: 0.5;
+    }
+
+    .footer {
+      position: fixed;
+      bottom: 17.4%;
+      right: 16.5%;
+      padding: 2rem 1rem;
+      background-color: #fff;
+      .buttonsContainer {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 0.75rem;
+        background-color: #fff;
+        .link {
+          @include font($Raleway, 600);
+          font-size: 0.875rem;
+          text-transform: uppercase;
+          color: $color-text;
+          background-color: #fff;
+          border: $color-text solid 1px;
+          padding: 1rem 2rem;
+        }
+        .button {
+          @extend .link;
+          border: none;
+          background-color: $color-primary;
+          color: #fff;
+          padding: 1.0625rem 2.0625rem;
         }
       }
       .total {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        margin-bottom: 5.5rem;
+        margin-bottom: 2rem;
         @include font($Roboto, 500);
         span {
-          font-weight: 700;
+          @include font($Raleway, 700);
         }
-      }
-      .placeholder {
-        margin: 14.5rem auto;
-        font-size: 1.5rem;
-        text-transform: uppercase;
-        opacity: 0.5;
       }
     }
     &::-webkit-scrollbar {
       width: 0;
       opacity: 0;
-    }
-    .buttonsContainer {
-      position: fixed;
-      padding: 2rem 1rem;
-      bottom: 17.44%;
-      right: 2.5%;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      gap: 0.75rem;
-      background-color: #fff;
-      .link {
-        @include font($Raleway, 600);
-        font-size: 0.875rem;
-        text-transform: uppercase;
-        color: $color-text;
-        background-color: #fff;
-        border: $color-text solid 1px;
-        padding: 1rem 2rem;
-      }
-      .button {
-        @extend .link;
-        border: none;
-        background-color: $color-primary;
-        color: #fff;
-        padding: 1.0625rem 2.0625rem;
-      }
     }
   }
 }
