little cleaning and refactoring

--- a/src/components/Attributes/attributes.module.scss
+++ b/src/components/Attributes/attributes.module.scss
@@ -1,5 +1,5 @@
-@use "../../../assets/scss/mixins" as *;
-@use "../../../assets/scss/variables" as *;
+@use "../../assets/scss/mixins" as *;
+@use "../../assets/scss/variables" as *;
 
 .attributesContainer {
   display: flex;
