--- a/src/components/Details/details.module.scss
+++ b/src/components/Details/details.module.scss
@@ -73,6 +73,7 @@
         @include font($Roboto, 400);
         font-size: 1rem;
         line-height: 1.625rem;
+        max-width: 50rem;
       }
       .button {
         background-color: $color-primary;
